deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clothes-ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clothes-ecommerce
  template:
    metadata:
      labels:
        app: clothes-ecommerce
    spec:
      containers:
  - name: DB_HOST
    valueFrom:
      configMapKeyRef:
        name: app-config
        key: DB_HOST

  - name: DB_NAME
    valueFrom:
      configMapKeyRef:
        name: app-config
        key: DB_NAME

  - name: DB_USER
    valueFrom:
      configMapKeyRef:
        name: app-config
        key: DB_USER

  - name: DB_PASSWORD
    valueFrom:
      secretKeyRef:
        name: mysql-secret
        key: MYSQL_ROOT_PASSWORD
        - name: clothes-ecommerce
          image: vijay944/clothes-ecommerce:1.0
          ports:
            - containerPort: 80
