service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clothes-ecommerce-service
spec:
  selector:
    app: clothes-ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
