ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clothes-ecommerce-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clothes-ecommerce-service
                port:
                  number: 80
